# ntios-2021

./: .gitignore  CMakeLists.txt  build.py  main.cpp  nportable_os.kdev4
arduino_libcpp/: CMakeLists.txt  IPAddress.cpp  Print.cpp  Stream.cpp  WString.cpp
arduino_libcpp/add_later/: AudioStream.cpp.later  AudioStream.h
arduino_libcpp/includes/: Arduino.h  Print.h  WCharacter.h  WProgram.h  WString.h  avr_functions.h
emuarch/: CMakeLists.txt  EmuArch.h  emu_platform.cpp  emuarch_memory.h  emuarch_strings.cpp  emuarch_strings.h  emulator.cpp  emulator.h  flow_and_shape.cpp  flow_and_shape.h  memory.cpp  system.h
neon-libc/: CMakeLists.txt  LinkedList.cpp  ft_argparse.c  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_imax.c  ft_imin.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_logi.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memdup.c  ft_memmove.c  ft_memset.c  ft_printf.c  ft_putnbr.c  ft_putnbr_base.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_signature.c  ft_sqrt.c  ft_str_is_alpha.c  (+59 more)
neon-libc/include/: LinkedList.h  libneon.h  libneonmath.h
neon-libc/printf/: ft_printf.h
ntios/: CMakeLists.txt  actuation.cpp  csvlog.cpp  csvlog.h  drivers.cpp  elf-header.c  elf-header.h  emuas.cpp  emuas.h  estimators.cpp  estimators.h  exec.cpp  exec.h  fs.cpp  keys.h  main.cpp  mmu.h  navigation.cpp  navigation.h  ntios.cpp  ntios_math.cpp  shell.cpp  texteditor.cpp  texteditor.h
ntios/actuator_control/: control_system.cpp  ntios2020_control_system.drawio  pid.cpp
ntios/crypto/: sha256.cpp
ntios/drivers/: arm_mmu.cpp  bno055.cpp  cellular.cpp  device_cli_utils.cpp  disks.cpp
ntios/drivers/filesystems/: exfat.cpp  fat32.cpp
ntios/drivers/gpio_expanders/: MCP23017.cpp
ntios/drivers/graphics/: canvas.cpp  font.cpp  graphics.cpp  ili9481.cpp  ra8875.cpp  ra8875_registers.h
ntios/drivers/touch/: FT5436.cpp  GT911.cpp
ntios/fileapi/: audio_decoder.cpp  audio_encoder.cpp  image_codec.cpp
ntios_include/: actuation.h  basics.h  blockdevice.h  drivers.h  emu.h  ntios.h  ntios_math.h  platform.h
ntios_include/actuator_control/: control_system.h  pid.h
ntios_include/crypto/: sha256.h
ntios_include/drivers/: bus8080.h  cellular.h  ctp_drivers.h  device_cli_utils.h  disks.h  imu_drivers.h  imu_util.h
ntios_include/drivers/filesystems/: exfat.h  fat32.h
ntios_include/drivers/gpio_expanders/: MCP23017.h
ntios_include/drivers/graphics/: canvas.h  color.h  font.h  graphics.h  ili9481.h  ra8875.h
ntios_include/fileapi/: audio_codec.h  image_codec.h
teensy4/: CMakeLists.txt  EventResponder.cpp  HardwareSerial.cpp  HardwareSerial1.cpp  HardwareSerial2.cpp  HardwareSerial3.cpp  HardwareSerial4.cpp  HardwareSerial5.cpp  HardwareSerial6.cpp  HardwareSerial7.cpp  HardwareSerial8.cpp  IPAddress.cpp  IntervalTimer.cpp  Makefile  Print.cpp  Stream.cpp  Tone.cpp  WString.cpp  analog.c  bootdata.c  clockspeed.c  debugprintf.c  digital.c  interrupt.c  main.cpp  pwm.c  rtc.c  startup.c  tempmon.c  usb.c  usb_audio.cpp  usb_desc.c  usb_inst.cpp  usb_joystick.c  usb_keyboard.c  usb_midi.c  usb_mouse.c  usb_rawhid.c  usb_seremu.c  usb_serial.c  (+4 more)
teensy4/includes/: EventResponder.h  WProgram.h  core_pins.h  digital.h  elapsedMillis.h  keylayouts.h  pgmspace.h  usb_desc.h
