 
add_library(neon_libc)

target_include_directories(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/printf)
target_include_directories(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_printf.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/printf_chrs.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/printf_fill.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/printf_handle_percent.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/printf_nbrs.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/printf_strs.c)

target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_argparse.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_atoi_base.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_atoi.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_bzero.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_imax.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_imin.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_isalnum.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_isalpha.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_isascii.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_isdigit.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_isprint.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_isspace.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_itoa.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_logi.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_lstadd.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_lstdel.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_lstdelone.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_lstiter.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_lstmap.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_lstnew.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_memalloc.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_memccpy.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_memchr.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_memcmp.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_memcpy.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_memdel.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_memdup.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_memmove.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_memset.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_printf.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_putnbr_base.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_putnbr.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_putnbr_fd.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_putstr.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_putstr_fd.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_signature.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_sqrt.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strcapitalize.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strcat.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strchr.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strchri.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strclr.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strcmp.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strcnt.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strcnt_norep.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strcpy.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strcut.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strdel.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strdup.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strequ.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_str_is_alpha.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_str_is_lowercase.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_str_is_numeric.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_str_is_printable.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_str_is_uppercase.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_striter.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_striteri.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strjoin.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strlcat.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strlcpy.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strlen.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strlowcase.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strmap.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strmapi.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strncat.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strncmp.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strncpy.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strnequ.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strnew.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strnstr.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strrchr.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strsplit.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strstr.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strsub.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strtrim.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_strupcase.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_tolower.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_toupper.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_wordcount.c)
target_sources(neon_libc PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/ft_wordsplit.c)

